--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,4 @@
 <% end %>
 
 <h1>ALTERNATE STOCKS</h1>
-<% @alternate_stocks.each do |alt_stock| %>
-  <%= alt_stock.isbn %>
-  <br>
-<% end %>
+<%= @alternate_stocks %>
